# reflectivity-acoustic

./: .gitignore  .gitlab-ci.yml  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
FD_comparison/: FD_comparison.ipynb  README.md  d_cal_seis.txt  fsismos_P0000  vp_true
FD_comparison/data/: seis_v1_nofs  seis_v2_fs  seis_v2_nofs  vp_v2
inversion/: FWI.py  README.md  fwi.py
notebooks/: L2_cost.ipynb  MCMC.ipynb  Source_setup.ipynb  integration.ipynb  integration_problem.ipynb  l2_cost.ipynb  reflectivity.ipynb  seismogram.ipynb  ultranest_sampling.ipynb
sampling/: fd_data_experiment.py  posterior.py  synthetic_experiment.py  ultranest_run.py
src/: acquisition.py  adjoint.py  builders.py  config.py  forward.py  io_utils.py  kernels.py  layers.py  misfit.py  noise.py  parameters.py  reflectivity_kx_omega.py  reverse.py  simulation.py  utilities.py
src/fortran/: reflectivity.f90  reflectivity_adj.f90  reflectivity_adjoint.py  reflectivity_benchmark.py  reflectivity_mod.mod  run.sh
src/plot/: plot_tools.py
src/quadrature/: filon.py  filon_Sommerfeld.py  gauss_cheby.py  gauss_leg.py  gauss_lobatto.py  integrands.py  levin.py  parameters_quad.py  quad_evanescent.py  trapezoidal.py
src/sampling/: model.py  ultranest_runs.py
tests/: conftest.py  test.py  test_functions.py  test_reflectivity.py  test_reflectivity_adjoint.py  test_signal.py
