[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflectivity-acoustic"
version = "0.1.0"
description = "Reflectivity-based acoustic forward modelling and inversion"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "ultranest",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
